--- a/gitops/apps/home-assistant/automations/switch_control_living_room.yaml
+++ b/gitops/apps/home-assistant/automations/switch_control_living_room.yaml
@@ -16,11 +16,13 @@ use_blueprint:
       - scene.living_room_nightlight
       - scene.living_room_relax
       - scene.living_room_energize
+      - scene.living_room_concentrate
+      - scene.living_room_read
     button_1_long_press: true
     button_1_long_action: all_lights_off
     button_4_long_press: true
     button_4_long_action: room_relax_scene
-    room_relax_scene: scene.living_room_relax
+    room_relax_scene: scene.home_movie
     brightness_step: 25
     min_brightness: 1
     max_brightness: 255
