--- a/gitops/apps/home-assistant/schedule-configmap.yaml
+++ b/gitops/apps/home-assistant/schedule-configmap.yaml
@@ -364,7 +364,12 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
+          - "custom"
         initial: "energize"
+      living_room_schedule_1_custom_scene:
+        name: "Living_room Morning Custom Scene"
+        icon: mdi:weather-sunrise
+        initial: ""
       living_room_schedule_2_scene:
         name: "Living_room Day Scene"
         icon: mdi:weather-sunny
@@ -375,7 +380,12 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
+          - "custom"
         initial: "concentrate"
+      living_room_schedule_2_custom_scene:
+        name: "Living_room Day Custom Scene"
+        icon: mdi:weather-sunny
+        initial: ""
       living_room_schedule_3_scene:
         name: "Living_room Evening Scene"
         icon: mdi:weather-sunset
@@ -386,7 +396,12 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
+          - "custom"
         initial: "relax"
+      living_room_schedule_3_custom_scene:
+        name: "Living_room Evening Custom Scene"
+        icon: mdi:weather-sunset
+        initial: ""
       living_room_schedule_4_scene:
         name: "Living_room Night Scene"
         icon: mdi:weather-night
@@ -397,7 +412,12 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
+          - "custom"
         initial: "nightlight"
+      living_room_schedule_4_custom_scene:
+        name: "Living_room Night Custom Scene"
+        icon: mdi:weather-night
+        initial: ""
       living_room_schedule_5_scene:
         name: "Living_room Late Night Scene"
         icon: mdi:weather-sunrise
@@ -408,7 +428,12 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
+          - "custom"
         initial: "nightlight"
+      living_room_schedule_5_custom_scene:
+        name: "Living_room Late Night Custom Scene"
+        icon: mdi:weather-sunrise
+        initial: ""
       living_room_default_scene:
         name: "Living_room Default Scene"
         icon: mdi:sofa
@@ -419,7 +444,12 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
+          - "custom"
         initial: "relax"
+      living_room_default_custom_scene:
+        name: "Living_room Default Custom Scene"
+        icon: mdi:sofa
+        initial: ""
       living_room_switch_brightness_step:
         name: "Living_room Brightness Step"
         icon: mdi:brightness-6
@@ -533,7 +563,12 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
+          - "custom"
         initial: "energize"
+      kitchen_schedule_1_custom_scene:
+        name: "Kitchen Morning Custom Scene"
+        icon: mdi:weather-sunrise
+        initial: ""
       kitchen_schedule_2_scene:
         name: "Kitchen Day Scene"
         icon: mdi:weather-sunny
@@ -544,7 +579,12 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
+          - "custom"
         initial: "concentrate"
+      kitchen_schedule_2_custom_scene:
+        name: "Kitchen Day Custom Scene"
+        icon: mdi:weather-sunny
+        initial: ""
       kitchen_schedule_3_scene:
         name: "Kitchen Evening Scene"
         icon: mdi:weather-sunset
@@ -555,7 +595,12 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
+          - "custom"
         initial: "relax"
+      kitchen_schedule_3_custom_scene:
+        name: "Kitchen Evening Custom Scene"
+        icon: mdi:weather-sunset
+        initial: ""
       kitchen_schedule_4_scene:
         name: "Kitchen Night Scene"
         icon: mdi:weather-night
@@ -566,7 +611,12 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
+          - "custom"
         initial: "nightlight"
+      kitchen_schedule_4_custom_scene:
+        name: "Kitchen Night Custom Scene"
+        icon: mdi:weather-night
+        initial: ""
       kitchen_schedule_5_scene:
         name: "Kitchen Late Night Scene"
         icon: mdi:weather-sunrise
@@ -577,7 +627,12 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
+          - "custom"
         initial: "nightlight"
+      kitchen_schedule_5_custom_scene:
+        name: "Kitchen Late Night Custom Scene"
+        icon: mdi:weather-sunrise
+        initial: ""
       kitchen_default_scene:
         name: "Kitchen Default Scene"
         icon: mdi:chef-hat
@@ -588,7 +643,12 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
+          - "custom"
         initial: "relax"
+      kitchen_default_custom_scene:
+        name: "Kitchen Default Custom Scene"
+        icon: mdi:chef-hat
+        initial: ""
       kitchen_switch_brightness_step:
         name: "Kitchen Brightness Step"
         icon: mdi:brightness-6
@@ -702,7 +762,12 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
+          - "custom"
         initial: "energize"
+      bedroom_schedule_1_custom_scene:
+        name: "Bedroom Morning Custom Scene"
+        icon: mdi:weather-sunrise
+        initial: ""
       bedroom_schedule_2_scene:
         name: "Bedroom Day Scene"
         icon: mdi:weather-sunny
@@ -713,7 +778,12 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
+          - "custom"
         initial: "concentrate"
+      bedroom_schedule_2_custom_scene:
+        name: "Bedroom Day Custom Scene"
+        icon: mdi:weather-sunny
+        initial: ""
       bedroom_schedule_3_scene:
         name: "Bedroom Evening Scene"
         icon: mdi:weather-sunset
@@ -724,7 +794,12 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
+          - "custom"
         initial: "relax"
+      bedroom_schedule_3_custom_scene:
+        name: "Bedroom Evening Custom Scene"
+        icon: mdi:weather-sunset
+        initial: ""
       bedroom_schedule_4_scene:
         name: "Bedroom Night Scene"
         icon: mdi:weather-night
@@ -735,7 +810,12 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
+          - "custom"
         initial: "nightlight"
+      bedroom_schedule_4_custom_scene:
+        name: "Bedroom Night Custom Scene"
+        icon: mdi:weather-night
+        initial: ""
       bedroom_schedule_5_scene:
         name: "Bedroom Late Night Scene"
         icon: mdi:weather-sunrise
@@ -746,7 +826,12 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
+          - "custom"
         initial: "nightlight"
+      bedroom_schedule_5_custom_scene:
+        name: "Bedroom Late Night Custom Scene"
+        icon: mdi:weather-sunrise
+        initial: ""
       bedroom_default_scene:
         name: "Bedroom Default Scene"
         icon: mdi:bed
@@ -757,7 +842,12 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
+          - "custom"
         initial: "relax"
+      bedroom_default_custom_scene:
+        name: "Bedroom Default Custom Scene"
+        icon: mdi:bed
+        initial: ""
       bedroom_switch_brightness_step:
         name: "Bedroom Brightness Step"
         icon: mdi:brightness-6
@@ -871,7 +961,12 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
+          - "custom"
         initial: "energize"
+      bathroom_schedule_1_custom_scene:
+        name: "Bathroom Morning Custom Scene"
+        icon: mdi:weather-sunrise
+        initial: ""
       bathroom_schedule_2_scene:
         name: "Bathroom Day Scene"
         icon: mdi:weather-sunny
@@ -882,7 +977,12 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
+          - "custom"
         initial: "concentrate"
+      bathroom_schedule_2_custom_scene:
+        name: "Bathroom Day Custom Scene"
+        icon: mdi:weather-sunny
+        initial: ""
       bathroom_schedule_3_scene:
         name: "Bathroom Evening Scene"
         icon: mdi:weather-sunset
@@ -893,7 +993,12 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
+          - "custom"
         initial: "relax"
+      bathroom_schedule_3_custom_scene:
+        name: "Bathroom Evening Custom Scene"
+        icon: mdi:weather-sunset
+        initial: ""
       bathroom_schedule_4_scene:
         name: "Bathroom Night Scene"
         icon: mdi:weather-night
@@ -904,7 +1009,12 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
+          - "custom"
         initial: "nightlight"
+      bathroom_schedule_4_custom_scene:
+        name: "Bathroom Night Custom Scene"
+        icon: mdi:weather-night
+        initial: ""
       bathroom_schedule_5_scene:
         name: "Bathroom Late Night Scene"
         icon: mdi:weather-sunrise
@@ -915,7 +1025,12 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
+          - "custom"
         initial: "nightlight"
+      bathroom_schedule_5_custom_scene:
+        name: "Bathroom Late Night Custom Scene"
+        icon: mdi:weather-sunrise
+        initial: ""
       bathroom_default_scene:
         name: "Bathroom Default Scene"
         icon: mdi:shower
@@ -926,7 +1041,12 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
+          - "custom"
         initial: "relax"
+      bathroom_default_custom_scene:
+        name: "Bathroom Default Custom Scene"
+        icon: mdi:shower
+        initial: ""
       bathroom_switch_brightness_step:
         name: "Bathroom Brightness Step"
         icon: mdi:brightness-6
@@ -1040,7 +1160,12 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
+          - "custom"
         initial: "energize"
+      hallway_schedule_1_custom_scene:
+        name: "Hallway Morning Custom Scene"
+        icon: mdi:weather-sunrise
+        initial: ""
       hallway_schedule_2_scene:
         name: "Hallway Day Scene"
         icon: mdi:weather-sunny
@@ -1051,7 +1176,12 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
+          - "custom"
         initial: "concentrate"
+      hallway_schedule_2_custom_scene:
+        name: "Hallway Day Custom Scene"
+        icon: mdi:weather-sunny
+        initial: ""
       hallway_schedule_3_scene:
         name: "Hallway Evening Scene"
         icon: mdi:weather-sunset
@@ -1062,7 +1192,12 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
+          - "custom"
         initial: "relax"
+      hallway_schedule_3_custom_scene:
+        name: "Hallway Evening Custom Scene"
+        icon: mdi:weather-sunset
+        initial: ""
       hallway_schedule_4_scene:
         name: "Hallway Night Scene"
         icon: mdi:weather-night
@@ -1073,7 +1208,12 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
+          - "custom"
         initial: "nightlight"
+      hallway_schedule_4_custom_scene:
+        name: "Hallway Night Custom Scene"
+        icon: mdi:weather-night
+        initial: ""
       hallway_schedule_5_scene:
         name: "Hallway Late Night Scene"
         icon: mdi:weather-sunrise
@@ -1084,7 +1224,12 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
+          - "custom"
         initial: "nightlight"
+      hallway_schedule_5_custom_scene:
+        name: "Hallway Late Night Custom Scene"
+        icon: mdi:weather-sunrise
+        initial: ""
       hallway_default_scene:
         name: "Hallway Default Scene"
         icon: mdi:corridor
@@ -1095,7 +1240,12 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
+          - "custom"
         initial: "relax"
+      hallway_default_custom_scene:
+        name: "Hallway Default Custom Scene"
+        icon: mdi:corridor
+        initial: ""
       hallway_switch_brightness_step:
         name: "Hallway Brightness Step"
         icon: mdi:brightness-6
